just fixed the double scroll thingy on all the site

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
     background-position: center;
     font-family: Arial, sans-serif;
     color: #333;
+    height: 100%;
 }
 
 header {
